kubernetes_OLD/yml/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
spec:
  replicas: 1    
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        #image: jenkins
        image: jenkins/jenkins
        command: ["/bin/sh"]
        args: ["-c", "echo MK;/init/startscript.sh"]
        securityContext:
          privileged: true
          runAsUser: 0
        ports:
        - name: jenkins-port1
          containerPort: 8080
        - name: jenkins-port2
          containerPort: 50000
        volumeMounts:
        #- name: nfsjenkins
        #  mountPath: /var/jenkins_home
        - name: config-jenkins-plugins-cm
          mountPath: /plugins.txt
          subPath: plugins.txt
        - name: config-jenkins-startscript-cm
          mountPath: /init/startscript.sh
          subPath: startscript.sh
        - name: config-jenkins-locale-cm
          mountPath: /init/locale.xml
          subPath: locale.xml
        - name: config-jenkins-maven-cm
          mountPath: /init/hudson.tasks.Maven.xml
          subPath: hudson.tasks.Maven.xml
        - name: config-jenkins-artifactory-cm
          mountPath: /init/org.jfrog.hudson.ArtifactoryBuilder.xml
          subPath: org.jfrog.hudson.ArtifactoryBuilder.xml
        - name: config-jenkins-artifactorymanagerconf-cm
          mountPath: /init/jenkins.model.ArtifactManagerConfiguration.xml
          subPath: jenkins.model.ArtifactManagerConfiguration.xml
      volumes:
      #- name: nfsjenkins
      #  persistentVolumeClaim:
      #    claimName: nfsjenkins
      - name: config-jenkins-plugins-cm
        configMap:
          name: jenkins-plugins-cm          
      - name: config-jenkins-startscript-cm
        configMap:
          name: jenkins-startscript-cm
          defaultMode: 0755
      - name: config-jenkins-locale-cm
        configMap:
          name: jenkins-locale-cm
      - name: config-jenkins-maven-cm
        configMap:
          name: jenkins-maven-cm
      - name: config-jenkins-artifactory-cm
        configMap:
          name: jenkins-artifactory-cm          
      - name: config-jenkins-artifactorymanagerconf-cm
        configMap:
          name: jenkins-artifactorymanagerconf-cm
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 31888
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 50000
    nodePort: 32000
    targetPort: 50000
    protocol: TCP
    name: http2
  selector:
    app: jenkins
---
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
  - host: jenkins
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
